# zkp

./: .gitignore  README.md  list_utils.py  merkle.py  polynomial.py  pyproject.toml
groth16/: README.md  protocol.py  qap.py  r1cs.py
stark101/: README.md  channel.py  main.py
