[project]
name = "zkp"
version = "0.1.0"
description = ""
authors = [{ name = "Po", email = "wwwcjf163@163.com" }]
requires-python = ">=3.14"
dependencies = ["numpy (>=2.4.2,<3.0.0)"]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
